# FPGA-Mario

./: .gitignore  README.md
aws/: index.js  package-lock.json  package.json  tasks.txt
aws/service/: changeBoost.js  changeStatus.js  endGame.js  getAllcar.js  getBestTime.js  getBoostStatus.js  getIP.js  leaderboard.js  login.js  playerReady.js  raceLap.js  raceStart.js  racerBestTime.js  racerPosition.js  register.js  selectCar.js  updateBestTime.js  updateIP.js
aws/utils/: auth.js  util.js
car/: README.md  platformio.ini
car/include/: camera_web_server.h  concurrent_server.h  esp32_cam_pins.h  motors.h  tcpserver.h  tcpserver_setup.h  webserver_setup.h  websocket_server.h
car/test/: motor_tests.h  pwm_tests.h  video_stream_tests.h  web_car_control_tests.h  wifi_tests.h
finish_line/: cam-test.py  raspberrypi.py
fpga/: README.md
fpga/colour_detection/: camera-latency-test.py  opencv-boost.py
fpga/pynq/vivado/cvtcolor-gray-8/cvtcolor-gray-8.ip_user_files/sim_scripts/design_1/xsim/: CMakeLists.txt  README.txt  design_1.sh  elab.opt  file_info.txt  vlog.prj
fpga/quartus_de10/: DE10_LITE_Golden_Top.asm.rpt  DE10_LITE_Golden_Top.done  DE10_LITE_Golden_Top.fit.rpt  DE10_LITE_Golden_Top.fit.summary  DE10_LITE_Golden_Top.flow.rpt  DE10_LITE_Golden_Top.jdi  DE10_LITE_Golden_Top.map.rpt  DE10_LITE_Golden_Top.map.smsg  DE10_LITE_Golden_Top.map.summary  DE10_LITE_Golden_Top.pof  DE10_LITE_Golden_Top.qsf  DE10_LITE_Golden_Top.qws  DE10_LITE_Golden_Top.sld  DE10_LITE_Golden_Top.sof  DE10_LITE_Golden_Top.sta.rpt  (+5 more)
player/: player_controller.py  player_script.py
(+1235 files in other folders)
